@@ -17,11 +17,11 @@
 package org.apache.activemq.artemis.utils.uri;
 
 import java.beans.PropertyDescriptor;
-import java.io.UnsupportedEncodingException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -204,12 +204,12 @@ public class BeanSupport {
          (type == String.class);
    }
 
-   public static String decodeURI(String value) throws UnsupportedEncodingException {
-      return URLDecoder.decode(value, "UTF-8");
+   public static String decodeURI(String value) {
+      return URLDecoder.decode(value, StandardCharsets.UTF_8);
    }
 
-   public static String encodeURI(String value) throws UnsupportedEncodingException {
-      return URLEncoder.encode(value, "UTF-8");
+   public static String encodeURI(String value) {
+      return URLEncoder.encode(value, StandardCharsets.UTF_8);
    }
 
 }
